Try to fix oversized heroimage.3 by targeting height, position and overflow in CSS

--- a/assets/css/S.css
+++ b/assets/css/S.css
@@ -26,7 +26,8 @@
   .carousel .img-crop-div {
     position: relative;
     width: 100%;
-    overflow-y: hidden;
+    height:min-content;
+    overflow: hidden;
   }
   
  /*footer*/
